Bug Fix | Breadcrumb | Add position to prevent overlap

--- a/_assets/scss/_placeholders.scss
+++ b/_assets/scss/_placeholders.scss
@@ -21,6 +21,7 @@
 
 %breadcrumb {
     margin-bottom: $wsu-spacing--component;
+    position: relative;
 }
 
 %breadcrumb__separator {
